- Added custom css for font colors - Added Future proof section in the home.html - Deleted unused content

--- a/public/Home.html
+++ b/public/Home.html
@@ -92,33 +92,16 @@
         </div>
     </div>
 
-    <div class="home-container">
-        
-    </div>
-
-</div>
-
-<div class="container mt-5">
-    <div class="container d-flex flex-row justify-content-center" style="gap:20px">
-        <div class="news-container mx-0" style="width: 18rem;">
-            <div class="news-thumbnail rounded d-flex justify-content-center align-items-center rounded">
-                <img src="http://localhost:5000/image%20assets/artworks/1742218974647.png" class="w-100 h-100 rounded" alt="...">
-            </div>
-            <p class="text-white">0df8s978fysd978fyusud8fsdfs8f7sd89f7s89fsdfhsdufhsd789ysdefsdf98s7f98f7s89f7s89f7sd89fsfsjhuoiufsdhjfosdifys89fys98fsdf7s8f7sd9f7sd89f7sd89fs7f89s7d.</p>
-        </div>
-        <div class="news-container mx-0" style="width: 18rem;">
-            <div class="news-thumbnail rounded d-flex justify-content-center align-items-center rounded">
-                <img src="http://localhost:5000/image%20assets/news/1742230861578.png" class="w-100 h-100 rounded" alt="...">
-            </div>
-            <p class="text-white">0df8s978fysd978fyusud8fsdfs8f7sd89f7s89fsdfhsdufhsd789ysdefsdf98s7f98f7s89f7s89f7sd89fsfsjhuoiufsdhjfosdifys89fys98fsdf7s8f7sd9f7sd89f7sd89fs7f89s7d.</p>
-        </div>
-        <div class="news-container mx-0" style="width: 18rem;">
-            <div class="news-thumbnail rounded d-flex justify-content-center align-items-center rounded">
-                <img src="http://localhost:5000/image%20assets/news/1742230861578.png" class="w-100 h-100 rounded" alt="...">
-            </div>
-            <p class="text-white">0df8s978fysd978fyusud8fsdfs8f7sd89f7s89fsdfhsdufhsd789ysdefsdf98s7f98f7s89f7s89f7sd89fsfsjhuoiufsdhjfosdifys89fys98fsdf7s8f7sd9f7sd89f7sd89fs7f89s7d.</p>
+    <div class="container home-container p-3 ">
+        <div class="p-lg-3 p-md-5 p-3 d-flex flex-column justify-content-center align-items-center" >
+            <h1 class="text-soc fw-bold mb-3">Future-proof your career with iACADEMY</h1>
+           <div style="max-width: 500px;">
+            <p class="text-white text-center" >We equip students with hands-on experience, expert guidance, and industry-driven tools to succeed in unpredictable landscapes. 
+                Embrace the challenge. Shape the future.</p>
+           </div>
         </div>
     </div>
+
 </div>
 
 <!-- Scripts -->
