--- a/public/Home.html
+++ b/public/Home.html
@@ -56,7 +56,7 @@
         <div class="position-absolute z-3 top-50 start-50 translate-middle text-white text-center fw-lighter w-100 responsive-header px-5">
             <p class="mb-0">THE  <span class="fw-bold">LEADING SCHOOL</span> FOR <span class="fw-bold">TECH & DESIGN</span></p>
             <p class="responsive-subheader">Fusing Creativity with Business and Technology</p>
-            <button class="btn btn-transparent rounded-pill rounded-pill px-4 py-3">Apply Now</button>
+            <button class="btn-transparent rounded-pill rounded-pill px-4 py-3">Apply Now</button>
         </div>
         <div class="top-content-image-container w-100 h-100 opacity-50 rounded"></div>
     </div>
@@ -192,6 +192,12 @@
             <button class="carousel-control-next custom-next" type="button" data-bs-target="#newsCarousel" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
             </button>
+        </div>
+
+        <div class="text-center mt-4">
+            <a id="seeMoreBtn" href="newsletter.html" class="see-more px-4 py-2" style="display: none;">
+                See More
+            </a>
         </div>
     </div>
     
