--- a/public/Newsletter.html
+++ b/public/Newsletter.html
@@ -40,7 +40,7 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light current-page" href="#">Gallery</a>
+                    <a class="nav-link text-light" href="Gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#">School Tour</a>
@@ -62,13 +62,40 @@
 <main>
     <!-- Main Content -->
     <div class="container my-5 p-4 text-center">
-        <h1 class="f-art text-soc mb-5">ART GALLERY</h1>
+        <h1 class="f-crisis text-white mb-5">NEWSLETTER</h1>
 
         <!-- Spacer -->
         <div class="container" style="height: 40px;"></div>
 
-        <div class="row g-5 justify-content-center" id="artGallery"></div>
-        <button id="seeMoreBtn" class="mt-4 px-5 fs-5">See More</button>
+        <div class="container">
+            <div class="row justify-content-center" id="newsContainer">
+
+            </div>
+        </div>
+        
+        <button id="seeMoreNewsBtn" class="mt-4 px-5 fs-5 see-more">See More</button>
+    </div>
+
+    <!-- News Modal -->
+    <div class="modal fade" id="newsModal" tabindex="-1" aria-labelledby="newsModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-lg modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header bg-iac border-0">
+                    <h5 class="text-start text-light">Article #<span id="articleNumber"></span></h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body text-center p-0">
+                    <div class="w-100">
+                        <img id="modalImage" src="" class="img-fluid w-100 object-fit-cover d-block"
+                             style="height: 450px; margin-top: -1px;" alt="News Image">
+                    </div>
+                    <div class="w-100 p-4">
+                        <h5 class="modal-title my-3 text-start" id="modalTitle">News Title</h5>
+                        <p id="modalDescription" class="text-start"></p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </main>
 
@@ -127,7 +154,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="js/gallery.js"></script>
+<script src="js/news.js"></script>
 <script src="js/global.js"></script>
 
 </body>
