- Added link to about.html - Added about.html - Added function to populate html

--- a/public/About.html
+++ b/public/About.html
@@ -40,13 +40,13 @@
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light current-page" href="#">Gallery</a>
+                    <a class="nav-link text-light" href="Gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#">School Tour</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="About.html">About us</a>
+                    <a class="nav-link text-light current-page" href="About.html">About us</a>
                 </li>
                 <li class="nav-item d-lg-none mt-3">
                     <a href="#" class="btn btn-white w-100">Apply Now</a>
@@ -62,13 +62,57 @@
 <main>
     <!-- Main Content -->
     <div class="container my-5 p-4 text-center">
-        <h1 class="f-art text-soc mb-5">ART GALLERY</h1>
 
         <!-- Spacer -->
-        <div class="container" style="height: 40px;"></div>
+        <div class="container" style="height: 100px;"></div>
 
-        <div class="row g-5 justify-content-center" id="artGallery"></div>
-        <button id="seeMoreBtn" class="mt-4 px-5 fs-5">See More</button>
+        <div class="container p-0">
+            <p class="about-us-header f-crisis text-white mb-lg-0 mb-3">OUR <span class="text-sbla">VISION</span></p>
+            <p class="text-white mb-5">iACADEMY <span class="text-sbla">develops game changers to lead the advancement of society.</span></p>    
+        </div>
+      
+        <!-- Spacer -->
+        <div class="container" style="height: 100px;"></div>
+
+        <div class="container p-0">
+            <p class="about-us-header f-crisis text-white mb-lg-0 mb-3">OUR <span class="text-soc">MISSION</span></p>
+            <p class="text-white mb-5">iACADEMY <span class="text-soc">develops game changers to lead the advancement of society.</span></p>    
+        </div>
+
+        <!-- Spacer -->
+        <div class="container" style="height: 300px;"></div>
+
+        <div class="container">
+            <p class="about-us-header f-crisis text-white mb-0" style="line-height: 1;">
+                OUR <br> <span class="text-sda why-text">WHY</span>
+            </p>     
+            
+            <div class="container text-white mt-5 our-why-desc p-0">
+                <p>A DOLE report records that, “...in the period of 1990-2000 the highest recorded number of unemployed persons was at 3.143 million or a 10.1 percent rate...”</p>
+                <p>This triggered a group of individuals to gather experts from different fields - academics and business, to contribute and address unemployment caused by (1) 
+                    the mismatch of the skills that graduates possess and what industries need, and (2) school drop out rate caused by lack of access and low student engagement. 
+                    That group became the founding members that established the Information and Communications Technology Academy or iACADEMY in 2002.
+                </p>
+                <p>Today, iACADEMY has developed strong industry partnerships that produce 96% job placement rate within 6 months after graduation. Students’ 
+                    passions are tuned into careers - they produce projects that address social problems, pitch projects to partner companies, and immerse in 
+                    an intensive guided 960 hour internship. iACADEMY continues to pave the way and reinvent education by offering degree programs that are highly 
+                    specialized in Computing, Business, and Design following an Output Based Education approach that allow students to learn through hands-on experience 
+                    and from industry experts. 
+                </p>
+                <p>This is our why.</p>
+            </div>
+
+            <p class="f-crisis text-white mb-0 mt-5 what-is-yours-txt">WHAT IS <span class="text-sda">YOURS?</span></p>   
+        </div>  
+
+        <!-- Spacer -->
+        <div class="container" style="height: 500px;"></div>
+
+        <div class="container text-center p-0">
+            <p class="f-crisis text-white mb-4 partner-header">OUR PARTNERS</p>     
+            <div class="row justify-content-center mt-5" id="partners-container">
+            </div>
+        </div>
     </div>
 </main>
 
@@ -127,7 +171,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="js/gallery.js"></script>
+<script src="js/about.js"></script>
 <script src="js/global.js"></script>
 
 </body>
