--- a/public/Home.html
+++ b/public/Home.html
@@ -46,7 +46,7 @@
                     <a class="nav-link text-light" href="#">School Tour</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">About us</a>
+                    <a class="nav-link text-light" href="About.html">About us</a>
                 </li>
                 <li class="nav-item d-lg-none mt-3">
                     <a href="#" class="btn btn-white w-100">Apply Now</a>
