- Added assets for school tour thumbnails - Added school_tour.html - Added tour.js - Added link to School tour - Added style for School_tour.html - Fixed spacer for about.html

--- a/public/About.html
+++ b/public/About.html
@@ -43,7 +43,7 @@
                     <a class="nav-link text-light" href="Gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">School Tour</a>
+                    <a class="nav-link text-light" href="School_tour.html">School Tour</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light current-page" href="About.html">About us</a>
@@ -113,6 +113,10 @@
             <div class="row justify-content-center mt-5" id="partners-container">
             </div>
         </div>
+
+        <!-- Spacer -->
+        <div class="container" style="height: 500px;"></div>
+
     </div>
 </main>
 
