--- a/public/Newsletter.html
+++ b/public/Newsletter.html
@@ -43,7 +43,7 @@
                     <a class="nav-link text-light" href="Gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">School Tour</a>
+                    <a class="nav-link text-light" href="School_tour.html">School Tour</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="About.html">About us</a>
