- Fixed naming convention for up and lp - Removed unecessary code - Adjusted style for tour.html - Fixed tagline for mission and vision

--- a/public/About.html
+++ b/public/About.html
@@ -68,7 +68,7 @@
 
         <div class="container p-0">
             <p class="about-us-header f-crisis text-white mb-lg-0 mb-3">OUR <span class="text-sbla">VISION</span></p>
-            <p class="text-white mb-5">iACADEMY <span class="text-sbla">develops game changers to lead the advancement of society.</span></p>    
+            <p class="text-white mb-5">iACADEMY <span class="text-sbla">Develops game changers to lead the advancement of society.</span></p>    
         </div>
       
         <!-- Spacer -->
@@ -76,7 +76,7 @@
 
         <div class="container p-0">
             <p class="about-us-header f-crisis text-white mb-lg-0 mb-3">OUR <span class="text-soc">MISSION</span></p>
-            <p class="text-white mb-5">iACADEMY <span class="text-soc">develops game changers to lead the advancement of society.</span></p>    
+            <p class="text-white mb-5">To <span class="text-soc">reinvent education and address the ever-changing needs of industry.</span></p>    
         </div>
 
         <!-- Spacer -->
