--- a/public/School_tour.html
+++ b/public/School_tour.html
@@ -112,11 +112,9 @@
     
         <!-- Dynamic Text -->
         <div class="d-flex flex-column justify-content-center align-items-center">
-            <h1 id="tourTitle" class="f-crisis text-white text-center">GAMING LOUNGE</h1>
-            <h2 id="tourLocation" class="text-soc mb-4 text-center">LOCATION: GROUND FLOOR</h2>
-            <p id="tourDescription" class="text-white text-center" style="max-width: 800px;">
-                A gaming lounge in a school provides students with a space to unwind, socialize, and enjoy games in a structured and positive environment.
-            </p>
+            <h1 id="tourTitle" class="text-white text-center text-uppercase"></h1>
+            <h2 id="tourLocation" class="text-soc mb-4 text-center"></h2>
+            <p id="tourDescription" class="text-white text-center" style="max-width: 800px;"></p>
         </div>
     
         <!-- Spacer -->
