- Added route to video archive - Added video_archive.html - Added styles for video_archive.html - Added videos.js

--- a/public/Gallery.html
+++ b/public/Gallery.html
@@ -43,6 +43,9 @@
                     <a class="nav-link text-light current-page" href="#">Gallery</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-light" href="Video_archive.html">Video Archive</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-light" href="School_tour.html">School Tour</a>
                 </li>
                 <li class="nav-item">
