- Cleaned code structure by adding page folder and programs folder - Adjusted code because of the added folders - Added assets for programs page - Added sda,sbla,shs,soc html and javascript

--- a/public/pages/Home.html
+++ b/public/pages/Home.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="Main.css">
+    <link rel="stylesheet" href="../Main.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
     <div class="container d-flex align-items-center p-0">
 
         <a class="navbar-brand pe-none" href="#">
-            <img src="image_assets/iac_logo_w.png" alt="Logo" height="40">
+            <img src="../image_assets/iac_logo_w.png" alt="Logo" height="40">
         </a>
 
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -33,10 +33,10 @@
                         Our Programs
                     </a>
                     <ul class="dropdown-menu bg-dark border-0" aria-labelledby="programsDropdown">
-                        <li><a class="dropdown-item text-light" href="#">School of Computing</a></li>
-                        <li><a class="dropdown-item text-light" href="#">School of Business & Liberal Arts</a></li>
-                        <li><a class="dropdown-item text-light" href="#">School of Design & Arts</a></li>
-                        <li><a class="dropdown-item text-light" href="#">Senior High School</a></li>
+                        <li><a class="dropdown-item text-light" href="programs/SOC.html">School of Computing</a></li>
+                        <li><a class="dropdown-item text-light" href="programs/SBLA.html">School of Business & Liberal Arts</a></li>
+                        <li><a class="dropdown-item text-light" href="programs/SDA.html">School of Design & Arts</a></li>
+                        <li><a class="dropdown-item text-light" href="programs/SHS.html">Senior High School</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -77,7 +77,7 @@
     
         <!-- Tagline 1 -->
         <div class="container home-container flex-column flex-lg-row p-3">
-            <img src="image_assets/home/community.png" class="community-image-container img-fluid" width="700px">
+            <img src="../image_assets/home/community.png" class="community-image-container img-fluid" width="700px">
             <div class="p-lg-3 p-md-5 p-3">
                 <h1 class="text-sda fw-bold mb-3">Join our community of Game Changers!</h1>
                 <p class="text-white text-wrap fs-5">Be part of a vibrant network of innovators and visionaries. Discover how our community empowers individuals to make a difference and create lasting impact.</p>
@@ -89,19 +89,19 @@
             <h1 class="text-white f-crisis mb-5 text-center">OUR PROGRAMS</h1>
            
             <div class="program-container d-flex flex-lg-row flex-column" style="gap:20px">
-                <a href="soc.html" class="program-box soc-container rounded">
+                <a href="programs/SOC.html" class="program-box soc-container rounded">
                     <div class="soc-image-overlay rounded"></div>
                     <h5 class="program-title">SCHOOL OF COMPUTING</h5>
                 </a>
-                <a href="sbla.html" class="program-box sbla-container rounded">
+                <a href="programs/SBLA.html" class="program-box sbla-container rounded">
                     <div class="sbla-image-overlay rounded"></div>
                     <h5 class="program-title">SCHOOL OF BUSINESS AND LIBERAL ARTS</h5>
                 </a>
-                <a href="soda.html" class="program-box soda-container rounded">
+                <a href="programs/SDA.html" class="program-box soda-container rounded">
                     <div class="soda-image-overlay rounded"></div>
                     <h5 class="program-title">SCHOOL OF DESIGN AND ARTS</h5>
                 </a>
-                <a href="shs.html" class="program-box shs-container rounded">
+                <a href="programs/SHS.html" class="program-box shs-container rounded">
                     <div class="shs-image-overlay rounded"></div>
                     <h5 class="program-title">SENIOR HIGH SCHOOL</h5>
                 </a>
@@ -200,7 +200,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-lg-0 mb-5 text-center">
-                <img src="image_assets/iac_logo_w.png" alt="iAcademy Logo" class="mb-3 w-100 img-fluid" style="max-width: 300px;">
+                <img src="../image_assets/iac_logo_w.png" alt="iAcademy Logo" class="mb-3 w-100 img-fluid" style="max-width: 300px;">
                 <div class="mb-3">
                     <a href="#" class="text-white me-2"><i class="fab fa-facebook fa-lg"></i></a>
                     <a href="#" class="text-white me-2"><i class="fab fa-instagram fa-lg"></i></a>
@@ -249,8 +249,8 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="js/home.js"></script>
-<script src="js/global.js"></script>
+<script src="../js/home.js"></script>
+<script src="../js/global.js"></script>
 
 </body>
 </html>
