--- a/public/pages/Newsletter.html
+++ b/public/pages/Newsletter.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="Main.css">
+    <link rel="stylesheet" href="../Main.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
     <div class="container d-flex align-items-center p-0">
 
         <a class="navbar-brand pe-none" href="#">
-            <img src="image_assets/iac_logo_w.png" alt="Logo" height="40">
+            <img src="../image_assets/iac_logo_w.png" alt="Logo" height="40">
         </a>
 
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -26,24 +26,24 @@
         <div class="collapse navbar-collapse ms-4 mt-5 mt-lg-0" id="navbarNav">
             <ul class="navbar-nav d-flex" style="gap: 20px;">
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="Home.html">Home</a>
+                    <a class="nav-link text-light" href="home.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link text-light dropdown-toggle" href="#" id="programsDropdown" role="button">
                         Our Programs
                     </a>
                     <ul class="dropdown-menu bg-dark border-0" aria-labelledby="programsDropdown">
-                        <li><a class="dropdown-item text-light" href="#">School of Computing</a></li>
-                        <li><a class="dropdown-item text-light" href="#">School of Business & Liberal Arts</a></li>
-                        <li><a class="dropdown-item text-light" href="#">School of Design & Arts</a></li>
-                        <li><a class="dropdown-item text-light" href="#">Senior High School</a></li>
+                        <li><a class="dropdown-item text-light" href="programs/SOC.html">School of Computing</a></li>
+                        <li><a class="dropdown-item text-light" href="programs/SBLA.html">School of Business & Liberal Arts</a></li>
+                        <li><a class="dropdown-item text-light" href="programs/SDA.html">School of Design & Arts</a></li>
+                        <li><a class="dropdown-item text-light" href="programs/SHS.html">Senior High School</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="Gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="Video_archive.html">Video Archive</a>
+                    <a class="nav-link text-light" href="Video_archive.html">Video Archive</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="School_tour.html">School Tour</a>
@@ -108,7 +108,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-lg-0 mb-5 text-center">
-                <img src="image_assets/iac_logo_w.png" alt="iAcademy Logo" class="mb-3 w-100 img-fluid" style="max-width: 300px;">
+                <img src="../image_assets/iac_logo_w.png" alt="iAcademy Logo" class="mb-3 w-100 img-fluid" style="max-width: 300px;">
                 <div class="mb-3">
                     <a href="#" class="text-white me-2"><i class="fab fa-facebook fa-lg"></i></a>
                     <a href="#" class="text-white me-2"><i class="fab fa-instagram fa-lg"></i></a>
@@ -157,8 +157,8 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="js/news.js"></script>
-<script src="js/global.js"></script>
+<script src="../js/news.js"></script>
+<script src="../js/global.js"></script>
 
 </body>
 </html>
