--- a/public/pages/programs/SHS.html
+++ b/public/pages/programs/SHS.html
@@ -6,7 +6,7 @@
     <title>Home</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="Main.css">
+    <link rel="stylesheet" href="../../Main.css">
 </head>
 <body>
 
@@ -15,7 +15,7 @@
     <div class="container d-flex align-items-center p-0">
 
         <a class="navbar-brand pe-none" href="#">
-            <img src="image_assets/iac_logo_w.png" alt="Logo" height="40">
+            <img src="../../image_assets/iac_logo_w.png" alt="Logo" height="40">
         </a>
 
         <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -26,30 +26,30 @@
         <div class="collapse navbar-collapse ms-4 mt-5 mt-lg-0" id="navbarNav">
             <ul class="navbar-nav d-flex" style="gap: 20px;">
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="Home.html">Home</a>
+                    <a class="nav-link text-light" href="../home.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-light dropdown-toggle" href="#" id="programsDropdown" role="button">
+                    <a class="nav-link text-light dropdown-toggle current-page" href="#" id="programsDropdown" role="button">
                         Our Programs
                     </a>
                     <ul class="dropdown-menu bg-dark border-0" aria-labelledby="programsDropdown">
-                        <li><a class="dropdown-item text-light" href="#">School of Computing</a></li>
-                        <li><a class="dropdown-item text-light" href="#">School of Business & Liberal Arts</a></li>
-                        <li><a class="dropdown-item text-light" href="#">School of Design & Arts</a></li>
-                        <li><a class="dropdown-item text-light" href="#">Senior High School</a></li>
+                        <li><a class="dropdown-item text-light" href="SOC.html">School of Computing</a></li>
+                        <li><a class="dropdown-item text-light" href="SBLA.html">School of Business & Liberal Arts</a></li>
+                        <li><a class="dropdown-item text-light" href="SDA.html">School of Design & Arts</a></li>
+                        <li><a class="dropdown-item text-light" href="SHS.html">Senior High School</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="Gallery.html">Gallery</a>
+                    <a class="nav-link text-light" href="../Gallery.html">Gallery</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light current-page" href="Video_archive.html">Video Archive</a>
+                    <a class="nav-link text-light" href="../Video_archive.html">Video Archive</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="School_tour.html">School Tour</a>
+                    <a class="nav-link text-light" href="../School_tour.html">School Tour</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="About.html">About us</a>
+                    <a class="nav-link text-light" href="../About.html">About us</a>
                 </li>
                 
                 <li class="nav-item d-lg-none mt-3">
@@ -65,13 +65,25 @@
 
 <main>
     <div class="container my-5 p-4 text-center">
-        <h1 class="f-crisis text-white mb-5">VIDEO ARCHIVE</h1>
+         <div class="container programs-content-container position-relative p-lg-0 p-lg-3">
+            <div class="position-absolute z-3 top-50 start-50 translate-middle text-white text-center fw-lighter w-100 responsive-header">
+                <p class="mb-0 fw-bold text-shs f-crisis ls-3 mb-4 department-header">SENIOR HIGH SCHOOL</p>
+                <p class="fs-5 fw-light px-5 mx-5 department-description">At iACADEMY Senior High School, students sharpen their skills in computing, business, design, 
+                    and the arts through gamification (GAME) and elevated learning experiences (ELX). Our industry-aligned curriculum ensures mastery of essential concepts 
+                    while developing real-world solutions. With a strong focus on holistic growth, we integrate co/extra-curricular activities, Homeroom guidance, and industry 
+                    immersion to prepare students for future success.
+                </p>
+            </div>
+            <div class="soc-image-container w-100 h-100 opacity-50" style="border-radius: 25px;"></div>
+        </div>
 
-        <div class="container" style="height: 40px;"></div>
+        <!-- Spacer -->
+        <div class="container" style="height: 150px;"></div>
 
-        <!-- Video Archive Section -->
-        <div id="videoArchive" class="container d-flex flex-column" style="gap:50px"></div>
+        <div id="programs-container"></div>
+    
 
+        <!-- Spacer -->
         <div class="container" style="height: 40px;"></div>
     </div>
 </main>
@@ -82,7 +94,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-4 mb-lg-0 mb-5 text-center">
-                <img src="image_assets/iac_logo_w.png" alt="iAcademy Logo" class="mb-3 w-100 img-fluid" style="max-width: 300px;">
+                <img src="../../image_assets/iac_logo_w.png" alt="iAcademy Logo" class="mb-3 w-100 img-fluid" style="max-width: 300px;">
                 <div class="mb-3">
                     <a href="#" class="text-white me-2"><i class="fab fa-facebook fa-lg"></i></a>
                     <a href="#" class="text-white me-2"><i class="fab fa-instagram fa-lg"></i></a>
@@ -131,8 +143,8 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-<script src="js/videos.js"></script>
-<script src="js/global.js"></script>
+<script src="../../js/programs/shs.js"></script>
+<script src="../../js/global.js"></script>
 
 </body>
 </html>
