--- a/public/pages/programs/SHS.html
+++ b/public/pages/programs/SHS.html
@@ -50,15 +50,14 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="../About.html">About us</a>
-                </li>
-                
+                </li>                            
                 <li class="nav-item d-lg-none mt-3">
-                    <a href="#" class="btn btn-white w-100">Apply Now</a>
+                    <a href="../Admissions.html" class="btn btn-white w-100">Apply Now</a>
                 </li>
             </ul>
         </div>
 
-        <a href="#" class="btn btn-white ms-auto py-2 d-none d-lg-block">Apply Now</a>
+        <a href="../Admissions.html" class="btn btn-white ms-auto py-2 d-none d-lg-block">Apply Now</a>
     </div>
 </nav>
 
