--- a/public/pages/Home.html
+++ b/public/pages/Home.html
@@ -29,14 +29,14 @@
                     <a class="nav-link text-light current-page" href="#">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-light dropdown-toggle" href="#" id="programsDropdown" role="button">
+                    <a class="nav-link text-white dropdown-toggle" href="#" id="programsDropdown" role="button">
                         Our Programs
                     </a>
-                    <ul class="dropdown-menu bg-dark border-0" aria-labelledby="programsDropdown">
-                        <li><a class="dropdown-item text-light" href="programs/SOC.html">School of Computing</a></li>
-                        <li><a class="dropdown-item text-light" href="programs/SBLA.html">School of Business & Liberal Arts</a></li>
-                        <li><a class="dropdown-item text-light" href="programs/SDA.html">School of Design & Arts</a></li>
-                        <li><a class="dropdown-item text-light" href="programs/SHS.html">Senior High School</a></li>
+                    <ul class="dropdown-menu bg-light border-0" aria-labelledby="programsDropdown">
+                        <li><a class="dropdown-item text-iac" href="programs/SOC.html">School of Computing</a></li>
+                        <li><a class="dropdown-item text-iac" href="programs/SBLA.html">School of Business & Liberal Arts</a></li>
+                        <li><a class="dropdown-item text-iac" href="programs/SDA.html">School of Design & Arts</a></li>
+                        <li><a class="dropdown-item text-iac" href="programs/SHS.html">Senior High School</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -52,12 +52,12 @@
                     <a class="nav-link text-light" href="About.html">About us</a>
                 </li>
                 <li class="nav-item d-lg-none mt-3">
-                    <a href="#" class="btn btn-white w-100">Apply Now</a>
+                    <a href="Admissions.html" class="btn btn-white w-100">Apply Now</a>
                 </li>
             </ul>
         </div>
 
-        <a href="#" class="btn btn-white ms-auto py-2 d-none d-lg-block">Apply Now</a>
+        <a href="Admissions.html" class="btn btn-white ms-auto py-2 d-none d-lg-block">Apply Now</a>
     </div>
 </nav>
 
@@ -70,7 +70,7 @@
             <div class="position-absolute z-3 top-50 start-50 translate-middle text-white text-center fw-lighter w-100 responsive-header px-5">
                 <p class="mb-0">THE  <span class="fw-bold">LEADING SCHOOL</span> FOR <span class="fw-bold">TECH & DESIGN</span></p>
                 <p class="responsive-subheader">Fusing Creativity with Business and Technology</p>
-                <button class="btn-transparent rounded-pill rounded-pill px-4 py-3">Apply Now</button>
+                <a href="Admissions.html" class="btn-transparent rounded-pill rounded-pill px-4 py-3 "  style="text-decoration: none;">Apply Now</a>
             </div>
             <div class="top-content-image-container w-100 h-100 opacity-50 rounded"></div>
         </div>
