--- a/public/pages/School_tour.html
+++ b/public/pages/School_tour.html
@@ -29,14 +29,14 @@
                     <a class="nav-link text-light" href="home.html">Home</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link text-light dropdown-toggle" href="#" id="programsDropdown" role="button">
+                    <a class="nav-link text-white dropdown-toggle" href="#" id="programsDropdown" role="button">
                         Our Programs
                     </a>
-                    <ul class="dropdown-menu bg-dark border-0" aria-labelledby="programsDropdown">
-                        <li><a class="dropdown-item text-light" href="programs/SOC.html">School of Computing</a></li>
-                        <li><a class="dropdown-item text-light" href="programs/SBLA.html">School of Business & Liberal Arts</a></li>
-                        <li><a class="dropdown-item text-light" href="programs/SDA.html">School of Design & Arts</a></li>
-                        <li><a class="dropdown-item text-light" href="programs/SHS.html">Senior High School</a></li>
+                    <ul class="dropdown-menu bg-light border-0" aria-labelledby="programsDropdown">
+                        <li><a class="dropdown-item text-iac" href="programs/SOC.html">School of Computing</a></li>
+                        <li><a class="dropdown-item text-iac" href="programs/SBLA.html">School of Business & Liberal Arts</a></li>
+                        <li><a class="dropdown-item text-iac" href="programs/SDA.html">School of Design & Arts</a></li>
+                        <li><a class="dropdown-item text-iac" href="programs/SHS.html">Senior High School</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -52,12 +52,12 @@
                     <a class="nav-link text-light" href="About.html">About us</a>
                 </li>
                 <li class="nav-item d-lg-none mt-3">
-                    <a href="#" class="btn btn-white w-100">Apply Now</a>
+                    <a href="Admissions.html" class="btn btn-white w-100">Apply Now</a>
                 </li>
             </ul>
         </div>
 
-        <a href="#" class="btn btn-white ms-auto py-2 d-none d-lg-block">Apply Now</a>
+        <a href="Admissions.html" class="btn btn-white ms-auto py-2 d-none d-lg-block">Apply Now</a>
     </div>
 </nav>
 
