- Adjusted checkbox values

--- a/public/pages/Admissions.html
+++ b/public/pages/Admissions.html
@@ -451,23 +451,23 @@
                     <div class="p-4 shadow rounded h-100" style="border-top: 5px solid #10326F;">
                         <label class="fw-bold d-block mb-2">Do you have any of the following? (Check all that apply):</label>
                         <div>
-                            <input type="checkbox" id="diabetes" name="healthIssues" value="diabetes">
+                            <input type="checkbox" id="diabetes" name="healthIssues" value="Diabetes">
                             <label for="diabetes">Diabetes</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="allergies" name="healthIssues" value="allergies">
+                            <input type="checkbox" id="allergies" name="healthIssues" value="Allergies">
                             <label for="allergies">Allergies</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="highBlood" name="healthIssues" value="high_blood">
+                            <input type="checkbox" id="highBlood" name="healthIssues" value="High blood">
                             <label for="highBlood">High Blood Pressure</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="anemia" name="healthIssues" value="anemia">
+                            <input type="checkbox" id="anemia" name="healthIssues" value="Anemia">
                             <label for="anemia">Anemia</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="otherHealth" name="healthIssues" value="others">
+                            <input type="checkbox" id="otherHealth" name="healthIssues" value="Others">
                             <label for="otherHealth">Others (Please specify):</label>
                             <input type="text" id="otherHealthDetails" name="otherHealthDetails" class="form-control mt-2" disabled>
                         </div>
@@ -483,39 +483,39 @@
                     <div class="p-4 shadow rounded" style="border-top: 5px solid #10326F;">
                         <label class="fw-bold d-block mb-2">Do you have any of the following? (Check all that apply):</label>
                         <div>
-                            <input type="checkbox" id="google" name="referralSource" value="google">
+                            <input type="checkbox" id="google" name="referralSource" value="Google">
                             <label for="google">Google</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="facebook" name="referralSource" value="facebook">
+                            <input type="checkbox" id="facebook" name="referralSource" value="Facebook">
                             <label for="facebook">Facebook</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="instagram" name="referralSource" value="instagram">
+                            <input type="checkbox" id="instagram" name="referralSource" value="Instagram">
                             <label for="instagram">Instagram</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="tiktok" name="referralSource" value="tiktok">
+                            <input type="checkbox" id="tiktok" name="referralSource" value="Tiktok">
                             <label for="tiktok">TikTok</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="news" name="referralSource" value="news">
+                            <input type="checkbox" id="news" name="referralSource" value="News">
                             <label for="news">News</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="schoolFair" name="referralSource" value="school_fair">
+                            <input type="checkbox" id="schoolFair" name="referralSource" value="School Fair">
                             <label for="schoolFair">School Fair/Orientation</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="billboard" name="referralSource" value="billboard">
+                            <input type="checkbox" id="billboard" name="referralSource" value="Billboard">
                             <label for="billboard">Billboard</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="event" name="referralSource" value="event">
+                            <input type="checkbox" id="event" name="referralSource" value="Event">
                             <label for="event">Event</label>
                         </div>
                         <div>
-                            <input type="checkbox" id="referral" name="referralSource" value="referral">
+                            <input type="checkbox" id="referral" name="referralSource" value="Referral">
                             <label for="referral">Referral</label>
                         </div>
                     </div>
